fix: dark theme UI fixes, backend warnings cleanup, exec/playground improvements